# SigCheck

./: README.md  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/littlewhitebear/signverification/: App.java  MainActivity.java
app/src/main/jni/: CMakeLists.txt  hide_map.txt  main.c
app/src/main/jni/detector/: library_check.c  library_check.h  lsposed_check.c  lsposed_check.h  proxy_check.c  proxy_check.h  riskmem_check.c  riskmem_check.h  sandbox_check.c  sandbox_check.h  seccomp_check.c  seccomp_check.h
app/src/main/jni/signature/binder/: binder.c  binder.h  parcel.c  parcel.h  pkginfo.c  pkginfo.h
app/src/main/jni/signature/crypto/: sha256.c  sha256.h
app/src/main/jni/utils/: memutil.c  memutil.h  strutil.c  strutil.h  syscall.c  syscall.h  sysutil.c  sysutil.h
